--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@
     color: gray;
     font-size: small;
 }
+.flex-away{
+    display: flex;
+    padding:10px;
+    justify-content: space-between;
+}
 .flexclose{
     display: flex;
     gap: 12px;
@@ -97,6 +102,7 @@ padding-bottom: 150px;
 .btn{
     background-color: #efefe8;
     color:rgb(139, 132, 132);
+    font-size:small;
     text-align: center;
     margin:20px;
     margin-top: 60px;
@@ -108,9 +114,12 @@ padding-bottom: 150px;
 }
 .btn2 {
     text-align: center;
-    margin: 20px;
+    margin: 10px;
 }
-
+.viewall{
+    text-align: center;
+    padding: 20px;
+}
 
 .free{
     font-size:small;
@@ -125,6 +134,8 @@ padding-bottom: 150px;
     background-color: #efefe8;
     color:black;
     margin:20px;
+    font-size:small;
+    text-align: center;
     padding: 5px;
     padding-left: 30px;
     padding-right: 30px;
@@ -134,6 +145,8 @@ padding-bottom: 150px;
     background-color: #bd1ebd;
     color:white;
     margin:20px;
+    font-size:small;
+    text-align: center;
     padding: 5px;
     padding-left: 30px;
     padding-right: 30px;
@@ -143,6 +156,8 @@ padding-bottom: 150px;
     background-color: #efefe8;
     color:black;
     margin:20px;
+    font-size:small;
+    text-align: center;
     padding: 5px;
     padding-left: 30px;
     padding-right: 30px;
@@ -152,12 +167,15 @@ padding-bottom: 150px;
     padding-left: 10px;
     padding-right: 10px;
 }
+.property{
+    font-size: small;
+    padding: 5px;
+}
 .dropdown {
     position: relative;
     display: inline-block;
 }
 .dropbtn{
-    border: 1px solid rgb(105, 102, 102);
     padding: 5px;
     margin-left: 10px;
     font-weight: bolder;
@@ -173,7 +191,7 @@ padding-bottom: 150px;
 }
 
 .dropdown button:hover {
-    background-color: #f9f9f9;
+    background-color: #979494;
 }
 
 .dropdown-content {
@@ -193,7 +211,9 @@ padding-bottom: 150px;
 table {
     border-collapse: collapse;
     width: 100%;
-    padding: 80px;
+    font-size: small;
+    padding: 30px;
+    margin:20px;
 }
 
 th, td {
@@ -206,7 +226,7 @@ th {
     background-color: #f2f2f2;
 }
 .slider-container {
-    width: 90%;
+    width: 150%;
     max-width: 100%;
     margin: 0 auto;
     text-align: center;
@@ -315,12 +335,25 @@ th {
 }
 .line {
     height: 1px;
-    background-color: rgb(88, 88, 88);
-    margin: 20px;
+    background-color: rgb(155, 155, 155);
+    margin: 5px;
     padding-left: 10px;
     padding-right: 10px; /* Added padding */
 }
 .minutes{
     font-size: small;
     padding-left: 20px;
+}
+.footer{
+    font-size: small;
+    text-align: center;
+}
+.bottom-heading{
+    padding: 10px;
+}
+.bottom-dropdowns{
+    background-color: white;
+}
+.bottom-content{
+    background-color: white;
 }
