--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 }
 
 .flex > .flex {
-    margin-left: 20px; /* Add margin between the two flex containers */
+    margin-left: 20px; 
 }
 
 
@@ -61,14 +61,14 @@
 
 .cards{
     display: flex;
-    flex-wrap: wrap; /* Allow flex items to wrap */
-    justify-content: space-between; /* Distribute items evenly */
+    flex-wrap: wrap; 
+    justify-content: space-between; 
     align-items: center; 
 }
 
 .card{
-    flex: 1; /* Take equal space */
-    min-width: 200px; /* Minimum width for each item */
+    flex: 1; 
+    min-width: 200px;
     background-color: white;
     height: 500px;
 box-sizing: border-box;
@@ -82,8 +82,8 @@ border-radius: 8px;
 padding-bottom: 150px;
 }
 .card-black-default{
-    flex: 1; /* Take equal space */
-    min-width: 200px; /* Minimum width for each item */
+    flex: 1; 
+    min-width: 200px; 
     background-color: black;
     color:white;
     height: 500px;
@@ -217,8 +217,8 @@ table {
 }
 
 th, td {
-    border: 1px solid #dddddd; /* Add border */
-    padding: 8px; /* Add padding */
+    border: 1px solid #dddddd; 
+    padding: 8px; 
     text-align: left;
 }
 
@@ -269,8 +269,8 @@ th {
 
 @media screen and (max-width: 600px) {
     .flex {
-        flex-direction: column; /* Change to column layout on smaller screens */
-        align-items: flex-start; /* Align items to the start */
+        flex-direction: column; 
+        align-items: flex-start; 
     }
 }
 .slider-tooltip {
@@ -292,14 +292,14 @@ th {
 .toggle {
     display: flex;
     justify-content: center;
-    margin-top: 10px; /* Added margin for better spacing */
+    margin-top: 10px; 
 }
 
 .toggle button {
-    padding: 8px 16px; /* Adjusted button padding */
+    padding: 8px 16px; 
     background-color: #ccc;
     color: #666;
-    border-radius: 25px; /* Rounder corners for toggle button */
+    border-radius: 25px;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -334,7 +334,7 @@ th {
     background-color: rgb(155, 155, 155);
     margin: 5px;
     padding-left: 10px;
-    padding-right: 10px; /* Added padding */
+    padding-right: 10px; 
 }
 .minutes{
     font-size: small;
